# Houston-Oil-Airs

./: .aiconfig.md  .env.example  .env.production  .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  ENTERPRISE_IMPLEMENTATION_SUMMARY.md  FAQ.md  GEMINI.md  LICENSE  Makefile  Makefile.ej-ai  Makefile.real  PLATFORM_UPGRADE_COMPLETE.md  README-EJ-AI.md  README.html  README.md  REALITY_CHECKLIST.txt  REFACTORING_SUMMARY.md  SPECIFICATION_IMPROVEMENT_SUMMARY.md  dependency_impact_matrix.yml  deploy.sh  docker-compose.ej-ai.yml  enhanced_features_spec.yml  enterprise-hardening-checklist.sh  evidence_schema.json  executable_test_suite.py  features.json  hoa_bootstrap.js  houston-oil-airs-diorama.html  index.html  local-enterprise-check.sh  package-lock.json  package.json  quick-test.sh  sha256sums.txt  (+5 more)
agents/: executor.md  final_validation.py  planner.md  reviewer.md  run_audit.py  run_real_audit.py  swe-bench-evaluator.md  test-runner.md
apis/: Architecture.md  README.md  requirements.txt
apis_v3/: .env.example  2025-09-19-role-principal-reality-auditor-your-job-is-to.txt  Dockerfile  README.md  docker-compose.yml  requirements.txt
backend/: Dockerfile  start.sh
backend/cpp-engine/: CMakeLists.txt
backend/cpp-engine/src/: data_processor.cpp  data_processor.hpp
claudedocs/: apis_comparison_analysis.md  troubleshooting-diagnostic-report.md
data/: air_quality_data.csv
database/: schema.sql  seed_data.sql
deployment/: api-gateway.yml  config.json  kubernetes.yml  monitoring.yml  postgres.yml  security-policies.yml
(+266 files in other folders)
